--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -3,7 +3,7 @@
   "Success Stories": "Success Stories",
   "Products": "Products",
   "News": "News & Events",
-  "Faq": "Faq",
+  "Faqs": "Faqs",
   "Video Intercom": "Video Intercom",
   "Access Control": "Access Control",
   "Surveillance & Monitoring": "Surveillance & Monitoring",
@@ -39,9 +39,6 @@
   "helping clients": "YenShow Technology not only helps clients achieve goals",
   "shaping future": "But also works together to shape a long-term future",
   "achieving results": "Achieving shared results under the vast blue sky",
-  "quote sentence 1": "YenShow Technology is both a story and a mission.",
-  "quote sentence 2": "We look forward to partnering with each client, flexible like clouds, solid like mountains,",
-  "quote sentence 3": "To create a vision as vast as the clear sky.",
   "quote signature": "—— YenShow Technology",
   "learn more text": "LEARN MORE LEARN MORE LEARN MORE",
   "news title": "News",
@@ -52,9 +49,6 @@
   "yenshow access control upgrade": "YenShow Smart Access Control System Upgrade Features Overview",
   "yenshow taipei government cooperation": "YenShow Cooperation Case with Taipei City Government",
   "security management trends 2025": "2025 Enterprise Security Management New Trends",
-  "faq question 1": "How does a smart access control system integrate with existing buildings?",
-  "faq question 2": "Which devices are supported by YenShow's monitoring system?",
-  "faq question 3": "What is the process for enterprises to implement a security management platform?",
   "common": {
     "loading": "Loading...",
     "error": "Error",
