--- a/i18n/locales/zh/common.json
+++ b/i18n/locales/zh/common.json
@@ -9,7 +9,8 @@
     "confirm": "確認",
     "back": "返回",
     "next": "下一步",
-    "retry": "重試"
+    "retry": "重試",
+    "scroll_more": "滾動查看更多"
   },
   "nav": {
     "home": "首頁",
