--- a/i18n/locales/zh/news.json
+++ b/i18n/locales/zh/news.json
@@ -25,8 +25,8 @@
     "detail": {
       "author": "作者: {name}",
       "published_at": "發布於: {date}",
+      "related": "相關文章",
       "back_to_list": "返回最新消息",
-      "not_found_title": "找不到指定的新聞",
       "back_list_link": "返回新聞列表",
       "video_card": {
         "title_fallback": "相關影片",
@@ -46,7 +46,7 @@
     "company_card": {
       "logo_alt": "遠岫科技 Logo",
       "title": "遠岫科技",
-      "cta": "📞 若您是系統整合商、建築顧問、或有技術合作需求 歡迎立即聯繫我們洽談！",
+      "cta": "📞若您是系統整合商、建築顧問、或有技術合作需求\n歡迎立即聯繫我們洽談！",
       "hotline_label": "專線│",
       "email_label": "Email│",
       "form_label": "線上表單│",
