--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -9,7 +9,8 @@
     "confirm": "Confirm",
     "back": "Back",
     "next": "Next",
-    "retry": "Retry"
+    "retry": "Retry",
+    "scroll_more": "Scroll to view more"
   },
   "nav": {
     "home": "Home",
