--- a/i18n/locales/zh/contact.json
+++ b/i18n/locales/zh/contact.json
@@ -7,7 +7,10 @@
       "next": "下一步",
       "back": "返回上一步",
       "submit": "提交",
-      "go_home": "回首頁"
+      "go_home": "回首頁",
+      "step1_label": "需求說明",
+      "step2_label": "聯絡資訊",
+      "step3_label": "完成"
     },
     "form": {
       "section1_title": "需求說明",
