--- a/i18n/locales/zh/products.json
+++ b/i18n/locales/zh/products.json
@@ -95,7 +95,7 @@
       },
       "construction-site-solution": {
         "title": "工地整合解決方案",
-        "shortTitle": "智慧工地"
+        "shortTitle": "工地管理"
       },
       "visitor-management-system": {
         "title": "訪客管理系統",
@@ -103,7 +103,7 @@
       },
       "meeting-reservation-system": {
         "title": "智慧型視訊會議系統",
-        "shortTitle": "智慧會議"
+        "shortTitle": "會議預約"
       },
       "wireless-security-system": {
         "title": "無線保全系統",
@@ -111,7 +111,7 @@
       },
       "long-term-care": {
         "title": "長期照護解決方案",
-        "shortTitle": "長照機構"
+        "shortTitle": "長期照護"
       },
       "parking-management-system": {
         "title": "停車管理系統",
