--- a/i18n/locales/en/products.json
+++ b/i18n/locales/en/products.json
@@ -27,6 +27,23 @@
     "product_not_found": "Product Not Found",
     "product_not_found_message": "The product you are looking for may have been removed or does not exist",
     "browse_all_products": "Browse All Products",
+    "product_detail": {
+      "features_title": "Product Features",
+      "product_description": "Product Description",
+      "product_model": "Model",
+      "product_video": "Product Video",
+      "cta_download_spec": "Download Specifications",
+      "image_click_to_enlarge": "Click to enlarge",
+      "image_preview_title": "Image Preview",
+      "close_preview": "Close Preview",
+      "show_more_features": "Show More Features",
+      "collapse_features": "Collapse Features",
+      "no_image_available": "No Image Available",
+      "video_not_supported": "Your browser does not support video playback.",
+      "download_error": "Download configuration error, please contact administrator.",
+      "no_spec_available": "No specification documents available for download, please contact us for more information.",
+      "spec_info_changed": "Product specification information seems to have changed or is unavailable, please try again."
+    },
     "scroll_left": "Scroll left to view products",
     "scroll_right": "Scroll right to view products",
     "loading": "Loading products...",
