--- a/i18n/locales/zh/products.json
+++ b/i18n/locales/zh/products.json
@@ -27,6 +27,23 @@
     "product_not_found": "找不到產品",
     "product_not_found_message": "您要查看的產品可能已被移除或不存在",
     "browse_all_products": "瀏覽所有產品",
+    "product_detail": {
+      "features_title": "產品特點",
+      "product_description": "產品說明",
+      "product_model": "型號",
+      "product_video": "產品影片",
+      "cta_download_spec": "下載規格",
+      "image_click_to_enlarge": "點擊放大檢視",
+      "image_preview_title": "圖片預覽",
+      "close_preview": "關閉預覽",
+      "show_more_features": "顯示更多特點",
+      "collapse_features": "收合特點",
+      "no_image_available": "尚無圖片",
+      "video_not_supported": "您的瀏覽器不支援影片播放。",
+      "download_error": "下載功能配置錯誤，請聯繫管理員。",
+      "no_spec_available": "目前尚無規格文件可供下載，請聯繫我們以獲取更多資訊。",
+      "spec_info_changed": "產品規格資訊似乎已變更或無法取得，請重試。"
+    },
     "scroll_left": "向左滾動產品",
     "scroll_right": "向右滾動產品",
     "loading": "正在載入產品...",
