--- a/i18n/locales/zh/common.json
+++ b/i18n/locales/zh/common.json
@@ -20,7 +20,9 @@
     "contact": "聯絡我們",
     "login": "登入",
     "logout": "登出",
-    "settings": "設定"
+    "settings": "設定",
+    "smart_solutions": "智慧方案",
+    "product_series": "產品系列"
   },
   "buttons": {
     "view_more": "看更多",
